# fibergen

./: CMakeLists.txt  README.md  TUTORIAL.md  _config.yml  build.sh  codemeta.json
cmake/: FindFFTW.cmake  PythonModuleHeader.h
demo/: category.xml  common.py  empty.xml
demo/elasticity/: category.xml
demo/elasticity/2d/: project.xml
demo/elasticity/digital_rocks/: project.xml
demo/elasticity/digital_rocks/data/: downsample.m  matlab2raw.m  raw2matlab.m
demo/elasticity/hashin/: project.xml
demo/elasticity/laminate/: project.xml
demo/elasticity/sfrp_parameter_fit/: project.xml
demo/elasticity/transverse_isotropy/: project.xml
demo/empty/: project.xml
demo/geometry/: category.xml
demo/geometry/bunny/: bunny.xml  numapde_scaled.xml  project.xml
demo/geometry/normals/: project.xml
demo/geometry/numapde_logo/: NumaPDE_Logo_3D.xml  project.xml
demo/geometry/primitives/: project.xml
demo/heat/: category.xml
demo/heat/heat/: project.xml
demo/hyperelasticity/: category.xml
demo/hyperelasticity/mixed_bc/: project.xml
demo/porous/: category.xml
demo/porous/poriosity/: project.xml
demo/python/: category.xml
demo/python/nunan_keller/: project.xml  thumbnail.tex
demo/python/pure_python/: project.py
demo/python/regular_polygon/: project.xml
demo/unsorted/: category.xml
demo/viscosity/: category.xml
demo/viscosity/nunan_keller/: project.xml
demo/viscosity/viscosity/: project.xml
demo/viscosity/viscosity_analytical/: project.xml
doc/: fileformat.xml
doc/doxygen/: Doxyfile  Makefile  TUTORIAL.md  fibergen.cpp  style.css
docker/: Dockerfile  docker-compose-gui.yml  docker-compose.yml
gui/: main.py
joss/: paper.bib  paper.md
lib/: fibergen.py  fibergen_common.py  fibergen_gui.py
src/: checkcpu.h  fibergen.cpp
